    actions (Closes: #173277)

  * Use XDG_CACHE_HOME spec instead of ~/.aptitude/cache (Closes: #671780)

  * Print useful message when package lists are out of date (Closes: #758764)

  * [curses] Allow to hide bottom half in several screens (Closes: #453853)

  * [curses] Show hostname on header line (Closes: #398101)

  * Log now distinguishes between remove and purge (Closes: #705612)

- Bug fixes:

  * [cmdline] Fix problems in 'build-depends' causing malfunctions
    (Closes: #802532)

    * Fix problem in which alternative dependencies of uninstalled packages were
      not resolved and satisfied properly, causing "Unable to satisfy
      dependencies", when they were actually installable.  Due to a
      mistake/typo, the possible packages were always compared against versions
      of one of the alternatives (the last one), instead of comparing the proper
      package-version of each alternative.

    * Messages about build-depends conflicts (unable to satisfy dependencies)
      now show version comparison operators.  There was a mistake in the
      variable to print (dependency type rather than operator).

  * [curses] Use default string for Default-Grouping when config is empty
    (Closes: #405970)

  * [curses] Improve message when becoming root fails (Closes: #516854)

  * [cmdline] For "search", use candidate or, if does not exist, current version
    rather than a random version to show information about the package
    (Closes: #490593)

  * Check that the config files are valid, otherwise exit (Closes: #472701)

    Upon reading the configuration files it did not check if they were valid,
    and for "~/.aptitude/config" it was writing it back immediately.  The
    writing stopped at the point of the reading failure (instead of just
    skipping the problematic parts), so part of the previous configuration file
    was lost.

    It is safer (and not too onerous) to ask the user to fix the configuration