@@ -31,6 +31,8 @@ Version 0.7.5 UNRELEASED
 
   * Log now distinguishes between remove and purge (Closes: #705612)
 
+  * [cmdline] Improve error reporting of add/remove-user-tags (Closes: #652421)
+
 - Bug fixes:
 
   * [cmdline] Fix problems in 'build-depends' causing malfunctions
